# speller

./: .gitignore  README.md  default.cfg  deps.py  main.py  pyproject.toml  speller_emulator.py  speller_event.py  speller_window.py  statistical_emulator.py
preprocessing/: collect_epochs_speller.py  epoch_collector.py  files.py  model.py  preprocessor.py  settings.py
speller/: config.py  secrets.py  secrets_settings.py  settings.py  utils.py
speller/classification/: classifier.py
speller/data_aquisition/: data_collector.py  data_streamer.py  epoch_getter.py  recorder.py
speller/monitoring/: monitoring.py  monitoring_collector.py  visualizer.py
speller/prediction/: chat_gpt_client.py  chat_gpt_predictor.py  dictionary.py  suggestions_getter.py  t9_predictor.py
speller/session/: command_decoder.py  entity.py  flashing_strategy.py  sequence_handler.py  session_handler.py  speller_runner.py  state_manager.py
speller/view/: speller_view.py  speller_window.py  view.py
static/: words_with_ipm.txt
