[tool.poetry]
name = "speller"
version = "0.0.1"
description = "BCI-speller"
authors = ["Gleb Andreevich"]

[tool.poetry.dependencies]
python = "^3.11"
unicorn-api = {git = "https://barleyjuice@bitbucket.org/barleyjuice/unicorn-api.git"}
pillow = "^10.2.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
independency = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
