[tool.poetry]
name = "speller"
version = "0.0.1"
description = "BCI-speller"
authors = ["Gleb Andreevich"]

[tool.poetry.dependencies]
python = "^3.11"
unicorn-api = {git = "https://barleyjuice@bitbucket.org/barleyjuice/unicorn-api.git"}
pillow = "^10.2.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
independency = "^1.3"
scikit-learn = "1.3.2"
click = "^8.1.7"
mne = "^1.6.1"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
pyqtgraph = "^0.13.7"
pyqt6 = "^6.7.0"
marisa-trie = "^1.1.1"
gigachat = "^0.1.23"
gigachain = "^0.1.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
